# harbour

./: .clang-format  .clang-tidy  .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  deploy.sh  gen_key.sh  index.html  sitemap.xml
.github/workflows/: cmake-multi-platform.yml  mkdocs.yml
benchmarks/: CMakeLists.txt  bench_trie.cpp  requests.cpp  trie.cpp
cmake/: asio.cmake  fmtlib.cmake  json.cmake  llhttp.cmake  openssl.cmake  reflect-cpp.cmake  unordered_dense.cmake
docs/doxygen/: Doxyfile
docs/mkdocs/: mkdocs.yml
docs/mkdocs/docs/: index.md
docs/mkdocs/docs/css/: custom.css
docs/mkdocs/docs/features/cookies/: index.md
docs/mkdocs/docs/features/dock/: index.md
docs/mkdocs/docs/features/json/: index.md
docs/mkdocs/docs/features/logging/: index.md
docs/mkdocs/docs/home/: design_goals.md  license.md
docs/mkdocs/docs/integration/: cmake.md  index.md
docs/mkdocs/docs/start/: index.md
examples/: CMakeLists.txt  cookies.cpp  database.cpp  dock.cpp  files.cpp  forms.cpp  handlers.cpp  json.cpp  logging.cpp  middleware.cpp  redirections.cpp  routes.cpp  securecookies.cpp  templates.cpp  websockets.cpp
examples/blog/: CMakeLists.txt  blog.cpp  create.html  delete.html  index.html  update.html
examples/blog/html/: create.html  delete.html  index.html  update.html
examples/blog/html/admin/: create.html  delete.html  update.html
examples/chat/: CMakeLists.txt  chat.cpp
examples/chat/html/: index.html
features/: index.html
features/cookies/: index.html
features/cookies/securecookies/: index.html
features/coroutines/: index.html
features/dock/: index.html
features/json/: index.html
features/logging/: index.html
features/middleware/: index.html
features/security/: index.html
features/ships/: index.html
features/websockets/: index.html
fuzz/: CMakeLists.txt  cookies.cpp  formdata.cpp  fuzzer.cpp  requests.cpp
home/code_of_conduct/: index.html
home/design_goals/: index.html
home/faq/: index.html
home/license/: index.html
home/releases/: index.html
include/harbour/: config.hpp  forms.hpp  handlers.hpp  harbour.hpp  io.hpp  json.hpp  jsonable.hpp  log.hpp  logger.hpp  middleware.hpp  ranges.hpp  request.hpp  response.hpp  result.hpp  ship.hpp  stringable.hpp  template.hpp  trie.hpp  websocket.hpp
include/harbour/cookies/: cookies.hpp  flags.hpp  map.hpp  parser.hpp  securecookies.hpp
include/harbour/crypto/: aes.hpp  base64.hpp  base64url.hpp  containers.hpp  crypto.hpp  hmac.hpp  jwt.hpp  random.hpp  sha.hpp
include/harbour/http/: method.hpp  status.hpp
include/harbour/log/: callbacks.hpp  log.hpp
include/harbour/middleware/: basicauth.hpp  files.hpp  middleware.hpp  verbose.hpp
include/harbour/request/: forms.hpp  headers.hpp  parser.hpp  request.hpp
include/harbour/response/: headers.hpp  response.hpp
include/harbour/server/: server.hpp  settings.hpp  socket.hpp
integration/: index.html
integration/cmake/: index.html
integration/dependencies/: index.html
search/: search_index.json
src/: base64.h  base64.hpp  cache.h  cache.hpp  config.h  config.hpp  defines.h  forms.hpp  handlers.h  handlers.hpp  harbour.cpp  io.cpp  io.h  io.hpp  jsonable.hpp  logger.h  logger.hpp  main.cpp  middleware.h  middleware.hpp  request.cpp  request.h  request.hpp  response.cpp  response.h  response.hpp  result.h  result.hpp  route.hpp  server.cpp  server.h  server.hpp  stringable.h  templates.hpp  utility.h
src/socket/: socket.h  socket.hpp  socket_darwin.h  socket_linux.h  socket_linux.hpp  socket_windows.h  socket_windows.hpp
standalone/: CMakeLists.txt  args.hpp  harbour.cpp  ships.hpp  templates.hpp
start/: index.html
tests/: CMakeLists.txt  test_router.cpp  testing.h
tests/crypto/: aes.cpp  base64.cpp  base64url.cpp  jwt.cpp  random.cpp  securecookies.cpp
tests/http/: cookies.cpp  formdata.cpp  requests.cpp
tests/server/: ssl.cpp  tcp.cpp
utils/: deploy.sh  gen_key.sh
web/: 404.html  forms.html  index.html
web/test/: example.html
